Fix comments padding on mobile.

--- a/resources/scss/components/_comment.scss
+++ b/resources/scss/components/_comment.scss
@@ -17,7 +17,7 @@
 
 		@media only screen and ( max-width: $content-width ) {
 			border-width: 0 0 1px;
-			margin-bottom: 0;
+			margin: 0;
 
 			&:first-child {
 				border-width: 1px 0;
